# Ciphora

./: .gitignore  CONTRIBUTING.md  ELECTRON_TO_TAURI_MIGRATION.md  FIXES_SUMMARY.md  GITFLOW.md  LICENSE  MOBILE_ADAPTATION.md  README.md  README_CN.md  README_TAURI.md  index.html  package-lock.json  package.json  preload.js  vite.config.js
.github/workflows/: FUNDING.yml  release.yml
docs/archive/: DATA_DISPLAY_FIXES.md  I18N_IMPLEMENTATION.md  RELEASE_v1.3.0.md  tauri-migration-guide.md
docs/development/: I18N_GUIDE.md  STARTUP_PERFORMANCE.md
public/wasm/: README.md  cimbar-worker.js
readme_res/: sponsors.md
scripts/: add-i18n.js  add-i18n.sh  cleanup-electron.ps1  fix-npm-lock.ps1  release.sh  setup-tauri.ps1  setup-tauri.sh
server/services/: ipcHandler.cjs
src/: i18n.js  index.jsx  input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/dao/: device.rs  mod.rs  settings.rs  state.rs  storage.rs
src-tauri/src/model/: app_state.rs  group.rs  import.rs  mod.rs  password_entry.rs  settings.rs  setup_response.rs
src-tauri/src/service/: app_state.rs  auth.rs  group.rs  import_export.rs  mfa.rs  mod.rs  password.rs  settings.rs
src-tauri/src/util/: constants.rs  crypto.rs  device.rs  mod.rs
src/api/: tauri-api.js
src/components/: AddPasswordModal.jsx  App.jsx  CimbarDecoder.jsx  CimbarQRCode copy.jsx  CimbarQRCode.jsx  CimbarTransfer.jsx  ConfirmInputModal.jsx  CopyButton.jsx  CustomDialog.jsx  Dashboard.jsx  DataDisplayModal.jsx  EditPasswordModal.jsx  GroupItem.jsx  GroupManageModal.jsx  GroupSelector.jsx  GroupSidebar.jsx  GroupTabs.jsx  Header.jsx  Icon.jsx  ImportExportModal.jsx  ImportPreviewModal.jsx  LanguageSwitcher.jsx  LoginView.jsx  MainVault.jsx  MobileBottomNav.jsx  PasswordCard.jsx  PasswordInputModal.jsx  PasswordItem.jsx  SearchBox.jsx  SecurityModal.jsx  SettingsView.jsx  SetupView.jsx  TOTPDisplay.jsx
src/hooks/: useGroups.js  useMobile.js
src/lib/: cimbar-engine.js
(+8 files in other folders)
