[package]
name = "ciphora"
version = "2.0.7"
description = "Ciphora - 安全密码管理器"
authors = ["loganchef <cubo@binrc.com>"]
license = "MIT"
repository = "https://github.com/loganchef/Ciphora"
edition = "2021"

[lib]
name = "ciphora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.7", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
totp-lite = "2.0"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-os = "2.2.0"
zstd = "0.13"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]




